--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -67,3 +67,35 @@ nav {
   line-height: 1.2;
   margin: 1.5rem 5rem;
 }
+
+/* Services Section */
+.services {
+  margin: 3rem auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.item {
+  height: 8rem;
+  width: 5rem;
+  margin: 0 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.paper {
+  max-width: 3.5rem;
+  height: auto;
+  display: block;
+}
+
+.ruler,
+.truck {
+  max-width: 5rem;
+  height: auto;
+  display: block;
+}
