--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -81,8 +81,8 @@ nav {
   width: 5rem;
   margin: 0 3rem;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-flow: column;
+  justify-content: space-between;
   align-items: center;
   text-align: center;
 }
